# mediterranean_reanalysis_downscaler

./: .gitignore  AUTHORS  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
models/tas_mediterranean/: config.json  training_scale.json
reanalysis_downscaler/: config.py  workflow.py
reanalysis_downscaler/dataset/: configuration.py  generator.py  make_dataset.py  scaler.py
reanalysis_downscaler/features/: build_features.py
reanalysis_downscaler/models/: api.py  configs.py  models.py  nn_trainer.py
reanalysis_downscaler/tests/: test_unit_model.py
reanalysis_downscaler/visualization/: visualize.py
