# -*- coding: utf-8 -*-
[metadata]
name = reanalysis_downscaler
summary = The aim of the project is to create a Machine learning (ML) model that can generate high-resolution regional reanalysis data (similar to the one produced by CERRA) by downscaling global reanalysis data from ERA5.
description-file =
    README.md
author = Mario Santa Cruz,Antonio Perez,Javier Diez
author-email = santacruzm@predictia.es
version = 0.0.1
license = Apache 2.0
home-page = https://github.com/jpxkqx/mediterranean_reanalysis_downscaler/reanalysis_downscaler
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    reanalysis_downscaler

[entry_points]
deepaas.v2.model =
    reanalysis_downscaler = reanalysis_downscaler.models.api
